...

    private lazy var tableView: UITableView = {
        let table = UITableView(frame: .zero, style: .insetGrouped)
        table.translatesAutoresizingMaskIntoConstraints = false
        table.dataSource = self
        table.delegate = self
        table.accessibilityIdentifier = "demo-menu"
        table.register(UITableViewCell.self, forCellReuseIdentifier: "mode")
        return table
    }()

    // MARK: - Lifecycle

...
